making some styling fixes to stop overflow and add some spacing between sort/filter menu and cards list

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   font-family: system-ui, Helvetica, Arial, sans-serif;
   margin: 0;
   background: linear-gradient(285deg, rgba(0, 14, 15, 1) 0%, rgba(0, 33, 36, 1) 27%, rgba(0, 33, 36, 1) 77%, rgba(0, 14, 15, 1) 100%);
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 nav {
@@ -160,6 +160,7 @@ img {
 .gallerySearch {
   width: 100%;
   height: 10vh;
+  margin-bottom: 10px;
 }
 
 .btn {
@@ -690,5 +691,9 @@ img {
 @media only screen and (min-width: 1200px) {
   .cardModalContainer {
     padding: 60px;
+  }
+
+  .gallerySearch {
+    margin-bottom: 30px;
   }
 }
